--- a/src/main/resources/com/ralph/res/db.properties
+++ b/src/main/resources/com/ralph/res/db.properties
@@ -2,3 +2,7 @@ driver_class=oracle.jdbc.OracleDriver
 db_url=jdbc:oracle:thin:@192.168.1.64:1521:orcl
 db_user=hr
 db_pwd=oracle
+#driver_class=com.mysql.jdbc.Driver
+#db_url=jdbc:mysql://localhost:3306/hello??useUnicode=true&characterEncoding=utf-8
+#db_user=root
+#db_pwd=mysql
