--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -73,4 +73,21 @@
     <session-config>
         <session-timeout>10</session-timeout>
     </session-config>
+
+    <filter>
+        <filter-name>EncodeFilter</filter-name>
+        <filter-class>com.ralph.util.EncodingFilter</filter-class>
+        <init-param>
+            <param-name>encode</param-name>
+            <param-value>utf-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>EncodeFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
+    <listener>
+        <listener-class>com.ralph.util.ContextLoaderListener</listener-class>
+    </listener>
 </web-app>
